syntax = "proto3";

package io.restorecommerce.status;

message Status {
  optional string id = 1;
  optional uint32 code = 2;
  optional string message = 3;
}

message OperationStatusObj {
  optional OperationStatus operation_status = 1;
}

message OperationStatus {
  optional uint32 code = 1;
  optional string message = 2;
}

message StatusListResponse {
  repeated Status status = 1;
  optional OperationStatus operation_status = 2;
}